--- a/PDVWebClient/Components/Pages/Weather.razor
+++ b/PDVWebClient/Components/Pages/Weather.razor
@@ -29,8 +29,23 @@ else
                     {
                         <p> @forecast.Filename </p>
                         <p> @forecast.Description </p>
-                        <button class="btn btn-primary" @onclick="IncrementCount">Go To Source</button>
-                        <button class="btn btn-primary" @onclick="IncrementCount">Go To Results</button>
+                        <div class="button-container">
+                            <NavLink class="nav-link" href="source">
+                                <button class="btn btn-primary" @onclick="IncrementCount">Go To Source</button>
+                            </NavLink>
+                            <NavLink class="nav-link" href="result">
+                                <button class="btn btn-primary" @onclick="IncrementCount">Go To Results</button>
+                            </NavLink>
+                        </div>
+                        <style>
+                            .button-container {
+                                display: flex;
+                                justify-content: left;
+                            }
+                            .btn {
+                                margin: 5px;
+                            }
+                        </style>
                     }
                     </td>
                 </tr>
