Implemented updating database in pdv_host.py

--- a/PDVWebClient/Components/Pages/Source.razor
+++ b/PDVWebClient/Components/Pages/Source.razor
@@ -3,7 +3,7 @@
 
 <PageTitle>StateContainer.Entries[(int)entryIndex].Filename</PageTitle>
 
-@StateContainer.Entries[(int)entryIndex].Source
+<pre>@StateContainer.Entries[(int)entryIndex].Source</pre>
 
 @code {
 	[Parameter]
@@ -11,6 +11,6 @@
 
 	protected override void OnParametersSet()
 	{
-		Console.WriteLine(entryIndex);
+
 	}
 }
