--- a/PDVWebClient/Components/Pages/Result.razor
+++ b/PDVWebClient/Components/Pages/Result.razor
@@ -45,7 +45,7 @@
       {
             connection.Open();
             Console.WriteLine("Connected to MySQL (from CPUResult)!");
-            string query = $"SELECT * FROM db_pdv.result_table_{entryID}";
+            string query = String.Format("SELECT * FROM {0}.result_table_{1}", Configuration["databaseName"] ?? "db_pdv", entryID);
             using(MySqlCommand command = new MySqlCommand(query, connection))
             {
                 using(MySqlDataReader reader = command.ExecuteReader())
